Use more newer java apis